styles/Home.module.scss
/* ... */
@media (max-width: 600px) {
    .project-cards {
        --row-amount: 1;
    }
    .animation-progress {
        left: -20px;
        bottom: -20px;
    }
    .header-content {
        padding-top: 140px;
    }
    .technology-podiums {
        --row-amount: 1;
    }
    .footer {
        font-size: 30px;
    }
}
@media (max-width: 500px) {
    .header-animation {
        margin-bottom: 180px;
    }
    .project-tile-title {
        font-size: 28px;
    }
    .project-tile-footer {
        flex-direction: column;
        align-items: flex-start;
        gap: var(--spacing-primary);
    }
    .project-tile-button {
        width: 100%;
        justify-content: center;
        
        a {
            padding: 15px 0;
        }
    }
    .about-tiles {
        --row-count: 1;
    }
    .about-links {
        justify-content: center;
        gap: 65px;
    }
}

